--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "dependencies": {
     "casa-campos": "file:",
+    "flowbite": "^3.1.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.488.0",
     "match-sorter": "^8.0.0",
-    "primeicons": "^7.0.0",
-    "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
