--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "casa-campos": "file:",
-    "flowbite": "^3.1.2",
+    "daisyui": "^5.0.27",
+    "date-fns": "^4.1.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.488.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "sort-by": "^1.2.0"
